--- a/.github/workflows/shellcheck.yml
+++ b/.github/workflows/shellcheck.yml
@@ -2,7 +2,7 @@ name: Shellcheck code analysis
 on: [pull_request]
 
 jobs:
-  get-artifacts:
+  Get-changes:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -25,7 +25,7 @@ jobs:
   
   Builder-Scripts:
     runs-on: ubuntu-latest
-    needs: get-artifacts
+    needs: Get-changes
     strategy:
       matrix: 
         tool: ${{ fromJson(needs.get-artifacts.outputs.tools_matrix) }}
@@ -43,21 +43,30 @@ jobs:
           path: |
             unattended_installer/**tool.sh
           
-  Shellcheck:
-    name: runner / shellcheck
+  Shellcheck-for-libraries:
+    name: Shellcheck / runner for libraries
+    runs-on: ubuntu-latest
+    needs: Get-changes
+    steps:
+      - uses: actions/checkout@v1
+      - name: Shellcheck for libraries of artifacts
+        uses: './.github/actions/shellcheck/'
+        with:
+          reporter: github-check
+          path: |
+            "./unattended_installer/cert_tool"
+            "./unattended_installer/passwords_tool"
+          pattern: "*.sh"
+          fail_on_error: "false"
+          
+  Shellcheck-for-artifacts:
+    name: Shellcheck / runner for artifacts
     runs-on: ubuntu-latest
     needs: Builder-Scripts
     steps:
       - uses: actions/checkout@v1
       - name: Download all artifacts
         uses: actions/download-artifact@v3
-      - name: Shellcheck for libraries of artifacts
-        uses: './.github/actions/shellcheck/'
-        with:
-          reporter: github-check
-          path: "./artifacts_generated"
-          pattern: "*.sh"
-          fail_on_error: "false"
       - name: Shellcheck for artifacts generated
         uses: './.github/actions/shellcheck/'
         with:
