--- a/.github/workflows/shellcheck.yml
+++ b/.github/workflows/shellcheck.yml
@@ -22,6 +22,27 @@ jobs:
           echo "::set-output name=tools_matrix::[${{ env.VAR }}]"
     outputs:
       tools_matrix: ${{ steps.set-matrix.outputs.tools_matrix }}
+  
+  Builder-scripts:
+    name: Builder scripts artifacts
+    runs-on: ubuntu-latest
+    needs: Get-changes
+    strategy:
+      matrix: 
+        tool: ${{ fromJson(needs.Get-changes.outputs.tools_matrix) }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2.1.0
+      - name: Generate artifacts
+        uses: './.github/actions/generate-artifacts/'
+        with: 
+          artifact: "${{ matrix.tool }}"
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: artifacts_generated
+          path: |
+            unattended_installer/**tool.sh
           
   Shellcheck-for-libraries:
     name: Shellcheck / runner for libraries
@@ -38,32 +59,11 @@ jobs:
             unattended_installer/passwords_tool
           pattern: "*.sh"
           fail_on_error: "false"
-
-  Builder-scripts:
-    name: Builder scripts artifacts
-    runs-on: ubuntu-latest
-    needs: Get-changes
-    strategy:
-      matrix: 
-        tool: ${{ fromJson(needs.get-artifacts.outputs.tools_matrix) }}
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2.1.0
-      - name: Generate artifacts
-        uses: './.github/actions/generate-artifacts/'
-        with: 
-          artifact: "${{ matrix.tool }}"
-      - name: Upload artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: artifacts_generated
-          path: |
-            unattended_installer/**tool.sh
-
+          
   Shellcheck-for-artifacts:
     name: Shellcheck / runner for artifacts
     runs-on: ubuntu-latest
-    needs: [Get-changes, Builder-scripts]
+    needs: Builder-scripts
     steps:
       - uses: actions/checkout@v1
       - name: Download all artifacts
@@ -88,7 +88,7 @@ jobs:
             })
             
   pr_commented:
-    needs: [Get-changes, Builder-scripts, Shellcheck-for-artifacts]
+    # This job only runs for pull request comments
     name: PR comment
     if: ${{ github.event.issue.pull_request }}
     runs-on: ubuntu-latest
