--- a/.github/actions/get-tools/action.yml
+++ b/.github/actions/get-tools/action.yml
@@ -11,13 +11,13 @@ runs:
       if: contains(inputs.tool, 'cert_tool')
       run: |
         if [ -z "${{ env.VAR }}" ]; then
-          echo 'VAR=\"cert-tool\"' >> $GITHUB_ENV
+          echo 'VAR={\"key\":\"cert-tool\",\"path\":\"unattended_installer/cert_tool\"}' >> $GITHUB_ENV
         else
-          echo 'VAR=${{ env.VAR }},\"cert-tool\"' >> $GITHUB_ENV
+          echo 'VAR=${{ env.VAR }},{\"key\":\"cert-tool\",\"path\":\"unattended_installer/cert_tool\"}' >> $GITHUB_ENV
         fi
     - name: Set passwords_tool
       shell: bash
-      if: contains(inputs.tool, 'passwords_tool')
+      if: contains(inputs.tool, 'passwords_tools')
       run: |
         if [ -z "${{ env.VAR }}" ]; then
           echo 'VAR=\"password-tool\"' >> $GITHUB_ENV
@@ -27,8 +27,8 @@ runs:
     - name: Set installer
       shell: bash
       if: |
-        contains(inputs.tool, 'downloader') || 
-        contains(inputs.tool, 'install_functions')
+        contains(inputs.tool, 'downloaders') || 
+        contains(inputs.tool, 'install_functionss')
       run: |
         if [ -z "${{ env.VAR }}" ]; then
           echo 'VAR=\"installer\"' >> $GITHUB_ENV
@@ -37,12 +37,12 @@ runs:
         fi
     - name: Set all
       shell: bash
-      if: contains(inputs.tool, 'common_functions')
+      if: contains(inputs.tool, 'common_functionss')
       run: |
         echo 'VAR=\"cert-tool\",\"password-tool\",\"installer\"' >> $GITHUB_ENV
     - name: Set builder.sh
       shell: bash
-      if: contains(inputs.tool, 'builder.sh')
+      if: contains(inputs.tool, 'builder.shs')
       run: |
         if [ -z "${{ env.VAR }}" ]; then
           echo 'VAR=\"builder.sh\"' >> $GITHUB_ENV
