--- a/.github/workflows/shellcheck.yml
+++ b/.github/workflows/shellcheck.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Build matrix
         id: set-matrix
         run: |
-          echo "::set-output name=tools_matrix::[${{ env.VAR }}]"
+          echo "::set-output name=tools_matrix::{\"data\":[${{ env.VAR }}]}"
     outputs:
       tools_matrix: ${{ steps.set-matrix.outputs.tools_matrix }}
   
@@ -28,8 +28,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: Get-changes
     strategy:
-      matrix: 
-        tool: ${{ fromJson(needs.Get-changes.outputs.tools_matrix) }}
+      matrix: ${{ fromJson(needs.Get-changes.outputs.tools_matrix) }}
+        #tool: ${{ fromJson(needs.Get-changes.outputs.tools_matrix) }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2.1.0
