--- a/.github/workflows/shellcheck.yml
+++ b/.github/workflows/shellcheck.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Build matrix
         id: set-matrix
         run: |
-          echo "::set-output name=tools_matrix::{\"data\":[${{ env.VAR }}]}"
+          echo "::set-output name=tools_matrix::{\"include\":[${{ env.VAR }}]}"
     outputs:
       tools_matrix: ${{ steps.set-matrix.outputs.tools_matrix }}
   
@@ -35,6 +35,7 @@ jobs:
         uses: actions/checkout@v2.1.0
       - name: Build
         run: |
+          echo "matrix: ${{ matrix }} 
           echo "key: ${{ matrix.key }} path: ${{ matrix.path }}"
       - name: Generate artifacts
         uses: './.github/actions/generate-artifacts/'
