--- a/.github/workflows/shellcheck.yml
+++ b/.github/workflows/shellcheck.yml
@@ -35,7 +35,7 @@ jobs:
         uses: actions/checkout@v2.1.0
       - name: Build
         run: |
-          echo "matrix: ${{ matrix }} 
+          echo "matrix: ${{ matrix }} "
           echo "key: ${{ matrix.key }} path: ${{ matrix.path }}"
       - name: Generate artifacts
         uses: './.github/actions/generate-artifacts/'
