--- a/.github/workflows/shellcheck.yml
+++ b/.github/workflows/shellcheck.yml
@@ -33,10 +33,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2.1.0
-      - name: Build
-        run: |
-          echo "matrix: ${{ matrix }} "
-          echo "key: ${{ matrix.key }} path: ${{ matrix.path }}"
       - name: Generate artifacts
         uses: './.github/actions/generate-artifacts/'
         with: 
@@ -46,21 +42,26 @@ jobs:
         with:
           name: artifacts_generated
           path: |
-            unattended_installer/**tool.sh
-          
+            'unattended_installer/**.sh', '!unattended_installer/builder.sh'
+      - name: Upload artifact
+        if: contains(matrix.key, 'builder.sh')
+        uses: actions/upload-artifact@v3
+        with:
+          name: artifacts_generated
+            
   Shellcheck-for-libraries:
     name: Shellcheck / runner for libraries
     runs-on: ubuntu-latest
     needs: Get-changes
+    strategy:
+      matrix: ${{ fromJson(needs.Get-changes.outputs.tools_matrix) }}
     steps:
       - uses: actions/checkout@v1
       - name: Shellcheck for libraries of artifacts
         uses: './.github/actions/shellcheck/'
-        with:
+        with: 
           reporter: github-pr-review
-          path: |
-            unattended_installer/cert_tool
-            unattended_installer/passwords_tool
+          path: "${{ matrix.path }}"
           pattern: "*.sh"
           fail_on_error: "false"
           
