--- a/.github/workflows/shellcheck.yml
+++ b/.github/workflows/shellcheck.yml
@@ -41,7 +41,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: artifacts_generated
-          paths: 'unattended_installer/**.sh', '!unattended_installer/builder.sh'
+          paths: unattended_installer/**.sh, !unattended_installer/builder.sh
       #- name: Upload artifact
       #  uses: actions/upload-artifact@v3
       #  with:
