--- a/.github/workflows/shellcheck.yml
+++ b/.github/workflows/shellcheck.yml
@@ -80,10 +80,13 @@ jobs:
       - uses: actions/checkout@v1
       - name: Download all artifacts
         uses: actions/download-artifact@v3
+      - name: ls
+        run: |
+          ls -la artifacts_generated
       - name: Shellcheck for artifacts generated
         uses: './.github/actions/shellcheck/'
         with:
-          reporter: github-pr-review
+          reporter: github-pr-check
           path: "./artifacts_generated"
           pattern: "*.sh"
           fail_on_error: "false"
