--- a/.github/actions/get-tools/action.yml
+++ b/.github/actions/get-tools/action.yml
@@ -20,26 +20,36 @@ runs:
       if: contains(inputs.tool, 'passwords_tools')
       run: |
         if [ -z "${{ env.VAR }}" ]; then
-          echo 'VAR=\"password-tool\"' >> $GITHUB_ENV
+          echo 'VAR={\"key\":\"password-tool\",\"path\":\"unattended_installer/passwords_tool\"}' >> $GITHUB_ENV
         else
-          echo 'VAR=${{ env.VAR }},\"password-tool\"' >> $GITHUB_ENV
+          echo 'VAR=${{ env.VAR }},{\"key\":\"password-tool\",\"path\":\"unattended_installer/passwords_tool\"}' >> $GITHUB_ENV
         fi
     - name: Set installer
       shell: bash
-      if: |
-        contains(inputs.tool, 'downloaders') || 
-        contains(inputs.tool, 'install_functionss')
+      if: contains(inputs.tool, 'install_functionss')
       run: |
         if [ -z "${{ env.VAR }}" ]; then
-          echo 'VAR=\"installer\"' >> $GITHUB_ENV
+          echo 'VAR={\"key\":\"installer\",\"path\":\"unattended_installer/install_functions\"}' >> $GITHUB_ENV
         else
-          echo 'VAR=${{ env.VAR }},\"installer\"' >> $GITHUB_ENV
+          echo 'VAR=${{ env.VAR }},{\"key\":\"installer\",\"path\":\"unattended_installer/install_functions\"}' >> $GITHUB_ENV
+        fi
+    - name: Set downloader
+      shell: bash
+      if: contains(inputs.tool, 'downloaders')
+      run: |
+        if [ -z "${{ env.VAR }}" ]; then
+          echo 'VAR={\"key\":\"installer\",\"path\":\"unattended_installer/downloader\"}' >> $GITHUB_ENV
+        else
+          echo 'VAR=${{ env.VAR }},{\"key\":\"installer\",\"path\":\"unattended_installer/downloader\"}' >> $GITHUB_ENV
         fi
     - name: Set all
       shell: bash
       if: contains(inputs.tool, 'common_functionss')
       run: |
-        echo 'VAR=\"cert-tool\",\"password-tool\",\"installer\"' >> $GITHUB_ENV
+        echo 'VAR={\"key\":\"cert-tool\",\"path\":\"unattended_installer/cert_tool\"},\
+        {\"key\":\"password-tool\",\"path\":\"unattended_installer/passwords_tool\"},\
+        {\"key\":\"installer\",\"path\":\"unattended_installer/install_functions\"},\
+        {\"key\":\"installer\",\"path\":\"unattended_installer/downloader\"}' >> $GITHUB_ENV
     - name: Set builder.sh
       shell: bash
       if: contains(inputs.tool, 'builder.sh')
