--- a/.github/workflows/shellcheck.yml
+++ b/.github/workflows/shellcheck.yml
@@ -51,21 +51,21 @@ jobs:
           path: |
             unattended_installer/builder.sh
             
-  Shellcheck-for-libraries:
-    name: Shellcheck / runner for libraries
-    runs-on: ubuntu-latest
-    needs: Get-changes
-    strategy:
-      matrix: ${{ fromJson(needs.Get-changes.outputs.tools_matrix) }}
-    steps:
-      - uses: actions/checkout@v1
-      - name: Shellcheck for libraries of artifacts
-        uses: './.github/actions/shellcheck/'
-        with: 
-          reporter: github-pr-review
-          path: "${{ matrix.path }}"
-          pattern: "*.sh"
-          fail_on_error: "false"
+  #Shellcheck-for-libraries:
+  #  name: Shellcheck / runner for libraries
+  #  runs-on: ubuntu-latest
+  #  needs: Get-changes
+  #  strategy:
+  #    matrix: ${{ fromJson(needs.Get-changes.outputs.tools_matrix) }}
+  #  steps:
+  #    - uses: actions/checkout@v1
+  #    - name: Shellcheck for libraries of artifacts
+  #      uses: './.github/actions/shellcheck/'
+  #      with: 
+  #        reporter: github-pr-review
+  #        path: "${{ matrix.path }}"
+  #        pattern: "*.sh"
+  #        fail_on_error: "false"
           
   Shellcheck-for-artifacts:
     name: Shellcheck / runner for artifacts
@@ -97,6 +97,6 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: '${{ env.output }}'
+              body: '${{ env.OUTPUT }}'
             })
             
