--- a/.github/workflows/shellcheck.yml
+++ b/.github/workflows/shellcheck.yml
@@ -88,6 +88,7 @@ jobs:
       - name: ls
         run: |
           ls -la 
+          cat output.md
       - name: Comments into issue
         uses: actions/github-script@v3
         with:
