--- a/.github/workflows/shellcheck.yml
+++ b/.github/workflows/shellcheck.yml
@@ -86,16 +86,28 @@ jobs:
         run: |
           ls -la 
           cat output.md
+      - id: get-comment-body
+        run: |
+          body="$(cat output.md)"
+          body="${body//'%'/'%25'}"
+          body="${body//$'\n'/'%0A'}"
+          body="${body//$'\r'/'%0D'}" 
+          echo "::set-output name=body::$body"
       - name: Comments into issue
-        uses: actions/github-script@v3
+        uses: peter-evans/create-or-update-comment@v2
         with:
-          github-token: ${{secrets.GITHUB_TOKEN}}
-          script: |
-            const fs = require('fs')
-            github.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: fs.readFileSync('output.md')
-            })
+          issue-number: 1
+          body: ${{ steps.get-comment-body.outputs.body }}
+      #- name: Comments into issue
+      #  uses: actions/github-script@v3
+      #  with:
+      #    github-token: ${{secrets.GITHUB_TOKEN}}
+      #    script: |
+      #      const fs = require('fs')
+      #      github.issues.createComment({
+      #        issue_number: context.issue.number,
+      #        owner: context.repo.owner,
+      #        repo: context.repo.repo,
+      #        body: fs.readFileSync('output.md')
+      #      })
             
