--- a/.github/workflows/shellcheck.yml
+++ b/.github/workflows/shellcheck.yml
@@ -90,10 +90,10 @@ jobs:
         id: get-comment-body
         run: |
           body="$(cat output.md)"
-          body="sed -i 's/.//g' ${body}"
           body="${body//'%'/'%25'}"
           body="${body//$'\n'/'%0A'}"
           body="${body//$'\r'/'%0D'}" 
+          body="${body//'.'/''}"
           echo "::set-output name=body::$body"
       #- name: Comments into issue
       #  uses: peter-evans/create-or-update-comment@v2
