--- a/.github/workflows/shellcheck.yml
+++ b/.github/workflows/shellcheck.yml
@@ -109,6 +109,6 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: ${{ steps.get-comment-body.outputs.body }}
+              body: '${{ steps.get-comment-body.outputs.body }}'
             })
             
