--- a/.github/workflows/shellcheck.yml
+++ b/.github/workflows/shellcheck.yml
@@ -51,21 +51,21 @@ jobs:
           path: |
             unattended_installer/builder.sh
             
-  #Shellcheck-for-libraries:
-  #  name: Shellcheck / runner for libraries
-  #  runs-on: ubuntu-latest
-  #  needs: Get-changes
-  #  strategy:
-  #    matrix: ${{ fromJson(needs.Get-changes.outputs.tools_matrix) }}
-  #  steps:
-  #    - uses: actions/checkout@v1
-  #    - name: Shellcheck for libraries of artifacts
-  #      uses: './.github/actions/shellcheck/'
-  #      with: 
-  #        reporter: github-pr-review
-  #        path: "${{ matrix.path }}"
-  #        pattern: "*.sh"
-  #        fail_on_error: "false"
+  Shellcheck-for-libraries:
+    name: Shellcheck / runner for libraries
+    runs-on: ubuntu-latest
+    needs: Get-changes
+    strategy:
+      matrix: ${{ fromJson(needs.Get-changes.outputs.tools_matrix) }}
+    steps:
+      - uses: actions/checkout@v1
+      - name: Shellcheck for libraries of artifacts
+        uses: './.github/actions/shellcheck/'
+        with: 
+          reporter: github-pr-review
+          path: "${{ matrix.path }}"
+          pattern: "*.sh"
+          fail_on_error: "false"
           
   Shellcheck-for-artifacts:
     name: Shellcheck / runner for artifacts
@@ -82,10 +82,6 @@ jobs:
           path: "./artifacts_generated"
           pattern: "*.sh"
           fail_on_error: "false"
-      - name: ls
-        run: |
-          ls -la 
-          cat output.md
       - name: Get shellcheck output
         id: get-comment-body
         run: |
@@ -98,16 +94,4 @@ jobs:
         uses: peter-evans/create-or-update-comment@v2
         with:
           issue-number: ${{ github.event.number }}
-          body: ${{ steps.get-comment-body.outputs.body }}
-      - name: Comments into issue
-        uses: actions/github-script@v3
-        with:
-          script: |
-            const fs = require('fs')
-            github.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: '${{ steps.get-comment-body.outputs.body }}'
-            })
-            
+          body: ${{ steps.get-comment-body.outputs.body }}          
