--- a/.github/actions/get-tools/action.yml
+++ b/.github/actions/get-tools/action.yml
@@ -6,46 +6,53 @@ inputs:
 runs:
   using: "composite" 
   steps:
-    - name: set cert
+    - name: Set cert_tool
       shell: bash
-      if: contains("${{ inputs.tool }}", 'cert_tool')
+      if: contains(inputs.tool, 'cert_tool')
       run: |
         if [ -z "${{ env.VAR }}" ]; then
-          echo 'VAR=\"cert-tool\"' >> $GITHUB_ENV
+          echo 'VAR={\"key\":\"cert-tool\",\"path\":\"unattended_installer/cert_tool\"}' >> $GITHUB_ENV
         else
-          echo 'VAR=${{ env.VAR }},\"cert-tool\"' >> $GITHUB_ENV
+          echo 'VAR=${{ env.VAR }},{\"key\":\"cert-tool\",\"path\":\"unattended_installer/cert_tool\"}' >> $GITHUB_ENV
         fi
-    - name: set password
+    - name: Set passwords_tool
       shell: bash
-      if: contains("${{ inputs.tool }}", 'passwords_tool')
+      if: contains(inputs.tool, 'passwords_tool')
       run: |
         if [ -z "${{ env.VAR }}" ]; then
-          echo 'VAR=\"password-tool\"' >> $GITHUB_ENV
+          echo 'VAR={\"key\":\"password-tool\",\"path\":\"unattended_installer/passwords_tool\"}' >> $GITHUB_ENV
         else
-          echo 'VAR=${{ env.VAR }},\"password-tool\"' >> $GITHUB_ENV
+          echo 'VAR=${{ env.VAR }},{\"key\":\"password-tool\",\"path\":\"unattended_installer/passwords_tool\"}' >> $GITHUB_ENV
         fi
-    - name: set install
+    - name: Set installer
       shell: bash
-      if: |
-        contains("${{ inputs.tool }}", 'downloader') || 
-        contains("${{ inputs.tool }}", 'install_functions')
+      if: contains(inputs.tool, 'install_functions')
       run: |
         if [ -z "${{ env.VAR }}" ]; then
-          echo 'VAR=\"installer\"' >> $GITHUB_ENV
+          echo 'VAR={\"key\":\"installer\",\"path\":\"unattended_installer/install_functions\"}' >> $GITHUB_ENV
         else
-          echo 'VAR=${{ env.VAR }},\"installer\"' >> $GITHUB_ENV
+          echo 'VAR=${{ env.VAR }},{\"key\":\"installer\",\"path\":\"unattended_installer/install_functions\"}' >> $GITHUB_ENV
         fi
-    - name: set all
+    - name: Set downloader
       shell: bash
-      if: contains("${{ inputs.tool }}", 'common_functions')
-      run: |
-        echo 'VAR=\"cert-tool\",\"password-tool\",\"installer\"' >> $GITHUB_ENV
-    - name: set builder
-      shell: bash
-      if: contains(steps.changed_files.outputs.all, 'builder.sh')
+      if: contains(inputs.tool, 'downloader')
       run: |
         if [ -z "${{ env.VAR }}" ]; then
-          echo 'VAR=\"builder.sh\"' >> $GITHUB_ENV
+          echo 'VAR={\"key\":\"installer\",\"path\":\"unattended_installer/downloader\"}' >> $GITHUB_ENV
         else
-          echo 'VAR=${{ env.VAR }},\"builder.sh\"' >> $GITHUB_ENV
+          echo 'VAR=${{ env.VAR }},{\"key\":\"installer\",\"path\":\"unattended_installer/downloader\"}' >> $GITHUB_ENV
+        fi
+    - name: Set all
+      shell: bash
+      if: contains(inputs.tool, 'common_functions')
+      run: |
+        echo 'VAR={\"key\":\"cert-tool\",\"path\":\"unattended_installer/cert_tool\"},{\"key\":\"password-tool\",\"path\":\"unattended_installer/passwords_tool\"},{\"key\":\"installer\",\"path\":\"unattended_installer/install_functions\"},{\"key\":\"installer\",\"path\":\"unattended_installer/downloader\"}' >> $GITHUB_ENV
+    - name: Set builder.sh
+      shell: bash
+      if: contains(inputs.tool, 'builder.sh')
+      run: |
+        if [ -z "${{ env.VAR }}" ]; then
+          echo 'VAR={\"key\":\"builder.sh\",\"path\":\"unattended_installer\"}' >> $GITHUB_ENV
+        else
+          echo 'VAR=${{ env.VAR }},{\"key\":\"builder.sh\",\"path\":\"unattended_installer\"}' >> $GITHUB_ENV
         fi
