--- a/.github/workflows/shell-check.yml
+++ b/.github/workflows/shell-check.yml
@@ -20,14 +20,19 @@ jobs:
         id: set-matrix
         run: |
           echo "::set-output name=tools_matrix::{\"include\":[${{ env.VAR }}]}"
+      - name: Check matrix
+        id: check-matrix
+        run: |
+            echo "::set-output name=empty_matrix::true"
     outputs:
       tools_matrix: ${{ steps.set-matrix.outputs.tools_matrix }}
+      empty_matrix: ${{ steps.check-matrix.outputs.empty_matrix }}
   
   Builder-scripts:
     name: Builder scripts artifacts
     runs-on: ubuntu-latest
     needs: Get-changes
-    if: ${{ needs.Get-changes.outputs.tools_matrix != '[]' && needs.Get-changes.outputs.tools_matrix != '' }}
+    if: ${{ needs.Get-changes.outputs.empty_matrix == 'false' }}
     strategy:
       matrix: ${{ fromJson(needs.Get-changes.outputs.tools_matrix) }}
     steps:
