--- a/.github/workflows/shell-check.yml
+++ b/.github/workflows/shell-check.yml
@@ -23,7 +23,9 @@ jobs:
       - name: Check matrix
         id: check-matrix
         run: |
+          if [ -z ${{ env.VAR }}];then
             echo "::set-output name=empty_matrix::true"
+          fi
     outputs:
       tools_matrix: ${{ steps.set-matrix.outputs.tools_matrix }}
       empty_matrix: ${{ steps.check-matrix.outputs.empty_matrix }}
@@ -32,7 +34,7 @@ jobs:
     name: Builder scripts artifacts
     runs-on: ubuntu-latest
     needs: Get-changes
-    if: ${{ needs.Get-changes.outputs.empty_matrix == 'false' }}
+    if: ${{ needs.Get-changes.outputs.empty_matrix != 'true' }}
     strategy:
       matrix: ${{ fromJson(needs.Get-changes.outputs.tools_matrix) }}
     steps:
@@ -61,6 +63,7 @@ jobs:
     name: Shellcheck / runner for libraries
     runs-on: ubuntu-latest
     needs: Get-changes
+    if: ${{ needs.Get-changes.outputs.empty_matrix == 'false' }}
     strategy:
       matrix: ${{ fromJson(needs.Get-changes.outputs.tools_matrix) }}
     steps:
