--- a/.github/workflows/shell-check.yml
+++ b/.github/workflows/shell-check.yml
@@ -23,8 +23,10 @@ jobs:
       - name: Check matrix
         id: check-matrix
         run: |
-          if [ -z "${{ env.VAR }}"];then
+          if [ -z '${{ env.VAR }}' ];then
             echo "::set-output name=empty_matrix::true"
+          else
+            echo "::set-output name=empty_matrix::false"
           fi
     outputs:
       tools_matrix: ${{ steps.set-matrix.outputs.tools_matrix }}
@@ -88,7 +90,8 @@ jobs:
         uses: './.github/actions/shellcheck/'
         with:
           reporter: github-pr-check
-          path: "./artifacts_generated"
+          path: |
+            artifacts_generated
           pattern: "*.sh"
           fail_on_error: "false"
       - name: Get shellcheck output
