--- a/.github/workflows/shell-check.yml
+++ b/.github/workflows/shell-check.yml
@@ -78,6 +78,20 @@ jobs:
           pattern: "*.sh"
           fail_on_error: "false"
           
+  Shellcheck-test:
+    name: Shellcheck test
+    runs-on: ubuntu-latest
+    needs: Get-changes
+    steps:
+      - uses: actions/checkout@v1
+      - name: Shellcheck for libraries of artifacts
+        uses: './.github/actions/shellcheck/'
+        with: 
+          reporter: github-pr-review
+          path: "unattended_installer/builder.sh"
+          pattern: "*.sh"
+          fail_on_error: "false"
+  
   Shellcheck-for-artifacts:
     name: Shellcheck / runner for artifacts
     runs-on: ubuntu-latest
