--- a/.github/workflows/shell-check.yml
+++ b/.github/workflows/shell-check.yml
@@ -87,6 +87,7 @@ jobs:
       - name: Shellcheck for libraries of artifacts
         uses: './.github/actions/shellcheck/'
         with: 
+          github_token: ${{ secrets.github_token }}
           reporter: github-pr-review
           path: "unattended_installer/builder.sh"
           pattern: "*.sh"
