--- a/.github/workflows/shell-check.yml
+++ b/.github/workflows/shell-check.yml
@@ -73,23 +73,9 @@ jobs:
       - name: Shellcheck for libraries of artifacts
         uses: './.github/actions/shellcheck/'
         with: 
-          reporter: github-pr-review
-          path: "${{ matrix.path }}"
-          pattern: "*.sh"
-          fail_on_error: "false"
-          
-  Shellcheck-test:
-    name: Shellcheck test
-    runs-on: ubuntu-latest
-    needs: Get-changes
-    steps:
-      - uses: actions/checkout@v1
-      - name: Shellcheck for libraries of artifacts
-        uses: './.github/actions/shellcheck/'
-        with: 
           github_token: ${{ secrets.github_token }}
           reporter: github-pr-review
-          path: "unattended_installer/builder.sh"
+          path: "${{ matrix.path }}"
           pattern: "*.sh"
           fail_on_error: "false"
   
@@ -104,6 +90,7 @@ jobs:
       - name: Shellcheck for artifacts generated
         uses: './.github/actions/shellcheck/'
         with:
+          github_token: ${{ secrets.github_token }}
           reporter: github-pr-check
           path: "./artifacts_generated"
           pattern: "*.sh"
