--- a/.github/workflows/shellcheck.yml
+++ b/.github/workflows/shellcheck.yml
@@ -12,8 +12,8 @@ jobs:
         with: 
           reporter: github-pr-review
           path: |
-            "unattended_installer/test.sh"
-            "unattended_installer/builder.sh"
+            "./unattended_installer/test.sh"
+            "./unattended_installer/builder.sh"
           pattern: "*.sh"
           fail_on_error: "false"
           
