--- a/.github/workflows/shellcheck.yml
+++ b/.github/workflows/shellcheck.yml
@@ -15,9 +15,7 @@ jobs:
         uses: './.github/actions/shellcheck/'
         with: 
           reporter: github-pr-review
-          path: |
-            unattended_installer/test.sh
-            unattended_installer/builder.sh
+          path: "unattended_installer/test.sh"
           pattern: "*.sh"
           fail_on_error: "false"
           
