--- a/.github/workflows/shellcheck.yml
+++ b/.github/workflows/shellcheck.yml
@@ -2,9 +2,21 @@ name: Shellcheck code analysis
 on: [pull_request]
 
 jobs:
+  Get-changes:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Build matrix
+      id: set-matrix
+      run: |
+        echo "::set-output name=tools_matrix::{\"include\":[{\"key\":\"test\",\"path\":\"unattended_installer/test.sh\"}]}"
+    outputs:
+      tools_matrix: ${{ steps.set-matrix.outputs.tools_matrix }}
   Shellcheck-for-libraries:
     name: Shellcheck / runner 
     runs-on: ubuntu-latest
+    needs: Get-changes
+    strategy:
+      matrix: ${{ fromJson(needs.Get-changes.outputs.tools_matrix) }}
     steps:
       - uses: actions/checkout@v1
       - name: ls
@@ -15,7 +27,7 @@ jobs:
         uses: './.github/actions/shellcheck/'
         with: 
           reporter: github-pr-review
-          path: "unattended_installer/builder.sh"
+          path: "${{ matrix.path }}"
           pattern: "*.sh"
           fail_on_error: "false"
           check_all_files_with_shebangs: "true" 
