Several Fixes related to debuginfo packages
- RPM manager/agent change .symbols files privileges
- RPM agent remove arch from Requieres values
- DEB remove symbols from binary package
- DEB change Depends to Conflicts for wazuh-*-dbg packages.
- RPM fix debuginfo package extraction for future packages

--- a/debs/SPECS/4.4.0/wazuh-agent/debian/rules
+++ b/debs/SPECS/4.4.0/wazuh-agent/debian/rules
@@ -145,8 +145,8 @@ override_dh_install:
 	cp src/init/templates/wazuh-agent.service ${TARGET_DIR}/etc/systemd/system/
 
 	# Add debug symbols
-	mkdir -p ${TARGET_DIR_SYMS}/${INSTALLATION_DIR}/.symbols
-	cp src/symbols/* ${TARGET_DIR_SYMS}/${INSTALLATION_DIR}/.symbols
+	mkdir -p ${TARGET_DIR_SYMS}/${INSTALLATION_DIR}
+	mv ${TARGET_DIR}/${INSTALLATION_DIR}/.symbols ${TARGET_DIR_SYMS}/${INSTALLATION_DIR}/.symbols
 
 override_dh_auto_clean:
 	$(MAKE) -j$(JOBS) -C src clean
