--- a/debs/SPECS/4.4.0/wazuh-agent/debian/control
+++ b/debs/SPECS/4.4.0/wazuh-agent/debian/control
@@ -16,7 +16,7 @@ Description: Wazuh helps you to gain security visibility into your infrastructur
 Package: wazuh-agent-dbg
 Architecture: any
 Section: devel
-Depends: wazuh-agent (= ${binary:Version})
+Conflicts: wazuh-agent (<< ${binary:Version}), wazuh-agent (>> ${binary:Version})
 Replaces: wazuh-agent-dbg
 Description: Wazuh helps you to gain security visibility into your infrastructure by monitoring hosts at an operating system and application level. It provides the following capabilities: log analysis, file integrity monitoring, intrusions detection and policy and compliance monitoring.
  .
