Added new permissions

--- a/unattended_installer/config/indexer/roles/roles.yml
+++ b/unattended_installer/config/indexer/roles/roles.yml
@@ -141,8 +141,9 @@ wazuh_ui_user:
     masked_fields: []
     allowed_actions:
     - "read"
+    - "indices:admin/get"
   tenant_permissions: []
-  static: false        
+  static: false
 
 wazuh_ui_admin:
   reserved: true
