--- a/documentation-templates/elastic-basic/filebeat_all_in_one.yml
+++ b/documentation-templates/elastic-basic/filebeat_all_in_one.yml
@@ -19,4 +19,5 @@ output.elasticsearch.protocol: https
 output.elasticsearch.ssl.certificate: /etc/elasticsearch/certs/elasticsearch.crt
 output.elasticsearch.ssl.key: /etc/elasticsearch/certs/elasticsearch.key
 output.elasticsearch.ssl.certificate_authorities: /etc/elasticsearch/certs/ca/ca.crt
+output.elasticsearch.ssl.verification_mode: strict
 output.elasticsearch.username: elastic
