Fix Pop up random show up

--- a/unattended_installer/config/dashboard/dashboard.yml
+++ b/unattended_installer/config/dashboard/dashboard.yml
@@ -11,4 +11,4 @@ server.ssl.enabled: true
 server.ssl.key: "/etc/wazuh-dashboard/certs/kibana-key.pem"
 server.ssl.certificate: "/etc/wazuh-dashboard/certs/kibana.pem"
 opensearch.ssl.certificateAuthorities: ["/etc/wazuh-dashboard/certs/root-ca.pem"]
-server.defaultRoute: /app/wazuh?security_tenant=global
+server.defaultRoute: /app/wazuh
