--- a/debs/SPECS/4.2.6/wazuh-agent/debian/rules
+++ b/debs/SPECS/4.2.6/wazuh-agent/debian/rules
@@ -138,6 +138,9 @@ override_dh_install:
 	sed -i "s:WAZUH_HOME_TMP:${INSTALLATION_DIR}:g" src/init/templates/wazuh-agent.service
 	cp src/init/templates/wazuh-agent.service ${TARGET_DIR}/etc/systemd/system/
 
+	mkdir -p ${TARGET_DIR}/etc/init/
+	cp /usr/local/bin/wazuh.conf ${TARGET_DIR}/etc/init/wazuh.conf
+
 override_dh_auto_clean:
 	$(MAKE) -C src clean
 
