--- a/debs/SPECS/4.2.6/wazuh-manager/debian/rules
+++ b/debs/SPECS/4.2.6/wazuh-manager/debian/rules
@@ -186,6 +186,9 @@ override_dh_install:
 	cp etc/templates/config/ubuntu/14/04/sca.files ${TARGET_DIR}$(INSTALLATION_SCRIPTS_DIR)/sca/ubuntu/14/04
 	cp etc/templates/config/ubuntu/16/04/sca.files ${TARGET_DIR}$(INSTALLATION_SCRIPTS_DIR)/sca/ubuntu/16/04
 
+	mkdir -p ${TARGET_DIR}/etc/init/
+	cp /usr/local/bin/wazuh.conf ${TARGET_DIR}/etc/init/wazuh.conf
+	
 override_dh_fixperms:
 	dh_fixperms
 	# Fix Python permissions
