--- a/debs/SPECS/4.4.0/wazuh-manager/debian/rules
+++ b/debs/SPECS/4.4.0/wazuh-manager/debian/rules
@@ -66,6 +66,7 @@ override_dh_install:
 	USER_GENERATE_AUTHD_CERT="y" \
 	USER_AUTO_START="n" \
 	USER_CREATE_SSL_CERT="n" \
+	USER_DEBUG_SYMBOLS="y" \
 	./install.sh
 
 	# Copying init.d script
