--- a/unattended_installer/config/certificate/config_aio.yml
+++ b/unattended_installer/config/certificate/config_aio.yml
@@ -1,10 +1,10 @@
 nodes:
   indexer:
-    - name: indexer
+    - name: wazuh-indexer
       ip: 127.0.0.1
   server:
-    - name: server
+    - name: wazuh-server
       ip: 127.0.0.1
   dashboard:
-    - name: dashboard
+    - name: wazuh-dashboard
       ip: 127.0.0.1
