Added builder scripts

--- a/alpine/docker/x86_64/Dockerfile
+++ b/alpine/docker/x86_64/Dockerfile
@@ -1,15 +1,15 @@
 FROM amd64/alpine:3.16.0
 
 # Install all the necessary tools to build the packages
-RUN apk add alpine-sdk sudo git less openssh openssl openssl-dev libgcc bash \
-    make gcc g++ cmake curl automake linux-headers autoconf libtool python3 && \
+RUN apk add ca-certificates curl alpine-sdk sudo git less openssh \
+    openssl openssl-dev libgcc bash make gcc g++ cmake curl automake \
+    linux-headers autoconf libtool python3 && \
     ln -s /usr/include/linux/a.out.h /usr/include/a.out.h && \
     addgroup -S wazuh && adduser -S wazuh -G wazuh
 
-# Add the scripts to build the RPM package
-#ADD builder.sh /usr/local/bin/builder
-#RUN chmod +x /usr/local/bin/builder
+# Add the scripts to build the Alpine package
+ADD builder.sh /usr/local/bin/builder
+RUN chmod +x /usr/local/bin/builder
 
 # Set the entrypoint
-#ENTRYPOINT ["/usr/local/bin/builder"]
-ENTRYPOINT ["/bin/bash"]
+ENTRYPOINT ["/usr/local/bin/builder"]
