--- a/alpine/SPECS/wazuh-agent/APKBUILD
+++ b/alpine/SPECS/wazuh-agent/APKBUILD
@@ -16,13 +16,14 @@ source=""
 builddir="${srcdir}/"
 
 build() {
+  set -x
   git clone https://github.com/wazuh/wazuh.git -b "${reference}" --depth=1
   cd wazuh/src
   sed -i '/#ifdef __linux__/,/#endif/d' shared/log_builder.c
   sed -i '/#ifdef __linux__/,/#endif/d' logcollector/logcollector.c
   make deps TARGET=agent EXTERNAL_SRC_ONLY=yes
 
-  sed -i '15d' external/rpm/config.h
+  sed -i '15d' external/rpm/config.h || :
   make -j"${jobs}" TARGET=agent
 
   cd ..
@@ -52,7 +53,7 @@ package() {
 
   install -d "${pkgdir}/${directory_base}"
   sed -i "s|DIRECTORY_BASE|${directory_base}|g" "${rootdir}/${pkgname}.pre-install"
-  #sed -i "s|DIRECTORY_BASE|${directory_base}|g" "${rootdir}/${pkgname}.post-install"
+  sed -i "s|DIRECTORY_BASE|${directory_base}|g" "${rootdir}/${pkgname}.post-install"
   sed -i "s|DIRECTORY_BASE|${directory_base}|g" "${rootdir}/${pkgname}.pre-upgrade"
   sed -i "s|DIRECTORY_BASE|${directory_base}|g" "${rootdir}/${pkgname}.post-upgrade"
   sed -i "s|DIRECTORY_BASE|${directory_base}|g" "${rootdir}/${pkgname}.pre-deinstall"
