Add fix to avoid GLIBC crash

--- a/documentation-templates/elastic-basic/filebeat_all_in_one.yml
+++ b/documentation-templates/elastic-basic/filebeat_all_in_one.yml
@@ -21,3 +21,12 @@ output.elasticsearch.ssl.key: /etc/elasticsearch/certs/elasticsearch.key
 output.elasticsearch.ssl.certificate_authorities: /etc/elasticsearch/certs/ca/ca.crt
 output.elasticsearch.ssl.verification_mode: strict
 output.elasticsearch.username: elastic
+
+logging.metrics.enabled: false
+
+seccomp:
+  default_action: allow
+  syscalls:
+  - action: allow
+    names:
+    - rseq
