--- a/unattended_installer/config/filebeat/filebeat.yml
+++ b/unattended_installer/config/filebeat/filebeat.yml
@@ -20,3 +20,12 @@ filebeat.modules:
       enabled: true
     archives:
       enabled: false
+
+logging.metrics.enabled: false
+
+seccomp:
+  default_action: allow
+  syscalls:
+  - action: allow
+    names:
+    - rseq
