Add fix to avoid GLIBC crash

--- a/unattended_installer/config/filebeat/filebeat.yml
+++ b/unattended_installer/config/filebeat/filebeat.yml
@@ -22,3 +22,10 @@ filebeat.modules:
       enabled: false
 
 logging.metrics.enabled: false
+
+seccomp:
+default_action: allow
+syscalls:
+- action: allow
+  names:
+  - rseq
