--- a/documentation-templates/wazuh/filebeat/filebeat.yml
+++ b/documentation-templates/wazuh/filebeat/filebeat.yml
@@ -30,3 +30,10 @@ logging.files:
   permissions: 0644
 
 logging.metrics.enabled: false
+
+seccomp:
+default_action: allow
+syscalls:
+- action: allow
+  names:
+  - rseq
