--- a/.github/workflows/password-tool.yml
+++ b/.github/workflows/password-tool.yml
@@ -1,8 +1,8 @@
 name: Password tool script tests
-on: push
- # pull_request:
-  #  paths:
-   #   - 'unattended_installer/passwords_tool/**'
+on:
+  pull_request:
+    paths:
+      - 'unattended_installer/passwords_tool/**'
 
 jobs:
   Build-password-tool-and-wazuh-install-scripts:
